Add Gruntfile and gitignore.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Hillevi</title>
+    <link rel="stylesheet" type="text/css" href="web/vendor.min.css" />
+    <link rel="stylesheet" type="text/css" href="web/hillevi-front.min.css" />
 </head>
 <body>
     <h1>TODO!!</h1>
