Add data services and login action.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
-<body data-ng-controller="MainController as vm">
+<body data-ng-controller="AppController as vm">
 
 <md-toolbar>
     <div class="md-toolbar-tools">
