--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <md-toolbar>
     <div class="md-toolbar-tools">
         <h2>
-            <span>Hillevi -  {{ vm.user }}</span>
+            <span>{{ 'APP_NAME' | translate }} -  {{ vm.user }}</span>
         </h2>
         <span flex></span>
 
