--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <md-button class="md-icon-button"
                    aria-label="Settings"
         >
-            <span class="material-icons">face</span>
+            <a href="#/settings"><span class="material-icons">face</span></a>
         </md-button>
         <md-button class="md-icon-button"
                    aria-label="Logout"
