Add widget bases.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <data-ng-include src="'web/templates/sidemenu.html'"></data-ng-include>
         </md-sidenav>
 
-        <data-ng-view flex class="layout-padding"></data-ng-view>
+        <data-ng-view flex class="layout-padding" style="overflow-y: scroll;"></data-ng-view>
     </div>
 </md-content>
 </body>
