Implement common loader to the top of the page and listen ajax calls in the very base of the $http.

--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
     </div>
 </md-toolbar>
 
+<md-progress-linear
+        class="top absolute bring-front md-warn"
+        md-mode="indeterminate"
+        data-ng-if="vm.loading"
+></md-progress-linear>
+
 <md-content layout="column" flex>
     <div layout="row" flex>
         <md-sidenav class="md-sidenav-left"
