Change material icons to be self-hosted.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Hillevi</title>
     <link rel="stylesheet" type="text/css" href="build/vendor.min.css" />
     <link rel="stylesheet" type="text/css" href="build/hillevi-front.min.css" />
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="build/material-icons/material-icons.css">
 </head>
 
 <body data-ng-controller="AppController as vm" layout="column" ng-cloak>
