--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
         <span flex></span>
 
         <md-button class="md-icon-button"
+                   data-ng-href="#/notifications"
+        >
+            <md-tooltip>{{ 'TT_NOTIFICATIONS' | translate }}</md-tooltip>
+            <md-icon>notifications</md-icon>
+        </md-button>
+        <md-button class="md-icon-button"
                    aria-label="Settings"
         >
             <md-tooltip>{{ 'TT_USER_SETTINGS' | translate }}</md-tooltip>
