Add bases for the app settings interface.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                    aria-label="Settings"
         >
             <md-tooltip>{{ 'TT_USER_SETTINGS' | translate }}</md-tooltip>
-            <a href="#/settings"><span class="material-icons">face</span></a>
+            <a href="#/settings"><span class="material-icons">settings</span></a>
         </md-button>
         <md-button class="md-icon-button"
                    aria-label="Logout"
